Updates to the report.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -137,3 +137,11 @@
   howpublished = {\url{https://fontawesome.com/}}
 }
 
+@misc{mit,
+  title        = {The MIT License},
+  howpublished = {\url{https://opensource.org/license/mit/}}
+}
+
+
+
+
